# renameit

renameit-gui/: Cargo.toml
renameit-gui/src/: lib.rs
renameit-lib/: Cargo.toml
renameit-lib/src/: error.rs  folder.rs  helper_functions.rs  lib.rs  number.rs  remove.rs  renamer_builder.rs
src/: main.rs
