[package]
name = "renameit-gui"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
iced = "0.14"
strum = {version = "0.28", features = ["derive"]}
rfd = "0.17"
home = "0.5"
renameit-lib = {path="../renameit-lib"}
iced_table2 = "0.14.2"
thiserror = "2.0"
